# near-abstract-account

./: .gitignore  Cargo.toml  README.md
abstract-account-contract/: Cargo.toml  README.md
abstract-account-contract/src/: lib.rs  types.rs
abstract-account-contract/src/mods/: external_contracts.rs
auth-contracts/passkeys-contract/: Cargo.toml
auth-contracts/webauthn-auth-contract/: Cargo.toml  README.md
auth-contracts/webauthn-auth-contract/src/: lib.rs
contracts/: Cargo.toml  README.md
contracts/abstract-account/: Cargo.toml
contracts/abstract-account/src/: contract.rs  contract_account.rs  contract_contracts.rs  lib.rs  mods.rs  types.rs
contracts/abstract-account/src/contract/: account.rs  auth.rs  sign.rs  transaction.rs
contracts/abstract-account/src/mods/: ethereum.rs  external_contracts.rs  oidc.rs  signer.rs  solana.rs  transaction.rs  wallet.rs  webauthn.rs
contracts/abstract-account/src/traits/: path.rs
contracts/abstract-account/src/types/: account.rs  auth_identities.rs  auth_identity.rs  identity.rs  transaction.rs
contracts/abstract-account/src/utils/: utils.rs
contracts/auth/ethereum-auth/: Cargo.toml
contracts/auth/ethereum-auth/src/: lib.rs
contracts/auth/oidc-auth/: Cargo.toml
contracts/auth/oidc-auth/src/: lib.rs
contracts/auth/oidc-zk/: Cargo.toml
contracts/auth/oidc-zk/src/: lib.rs
contracts/auth/solana-auth/: Cargo.toml
contracts/auth/solana-auth/src/: lib.rs
contracts/auth/webauthn-auth/: Cargo.toml
contracts/auth/webauthn-auth/src/: lib.rs
contracts/interfaces/: Cargo.toml
contracts/interfaces/src/: auth.rs  ethereum_auth.rs  lib.rs  oidc_auth.rs  solana_auth.rs  traits.rs  webauthn_auth.rs
contracts/interfaces/src/auth/: oidc.rs  wallet.rs  webauthn.rs
contracts/interfaces/src/traits/: message.rs  path.rs  signable_message.rs
contracts/near/abstract-account/src/: lib.rs
contracts/near/abstract-account/src/mods/: signer.rs
contracts/solana/: Anchor.toml  Cargo.toml
contracts/solana/programs/contracts/src/: lib.rs
frontend/: .eslintrc.json  middleware.ts  package.json  pnpm-lock.yaml
frontend/app/: global.d.ts  layout.tsx  page.tsx
frontend/app/_components/: UpdateOIDCKeys.tsx
frontend/app/_providers/: AccountContext.tsx  FacebookProvider.tsx  GoogleProvider.tsx  QueryClientProvider.tsx
frontend/app/_utils/: AuthAdapter.ts  oidc.ts  wallet.ts  webauthn.ts
frontend/app/account/: page.tsx
frontend/app/account/components/: AccountInfo.tsx  IdentitiesList.tsx
frontend/app/admin/: page.tsx
frontend/app/admin/_components/: AccountDetails.tsx  UpdateOIDCKeys.tsx
frontend/app/admin/components/: AccountDetails.tsx  ContractBalanceManagement.tsx  UpdateOIDCKeys.tsx
frontend/app/auth0/: page.tsx
frontend/app/facebook/callback/: page.tsx
frontend/app/login/: page.tsx
frontend/app/login/components/: SelectAccountModal.tsx
frontend/app/prototype/auth0/: page.tsx
frontend/app/prototype/motif/: page.tsx
frontend/app/register/: page.tsx
frontend/app/transaction/: page.tsx
frontend/app/transaction/_components/: AuthModal.tsx
frontend/components/: AccountInfo.tsx  AuthButton.tsx  AuthIcons.tsx  AuthModal.tsx  AuthenticationButtons.tsx  ContractBalanceManagement.tsx  FacebookButton.tsx  GoogleButton.tsx  Header.tsx  IdentitiesList.tsx
frontend/components/ui/: dropdown-menu.tsx  select.tsx  toast.tsx
frontend/contracts/: useAbstractAccountContract.ts
frontend/contracts/AbstractAccountContract/: AbstractAccountContract.ts  useAbstractAccountContract.ts
frontend/contracts/AbstractAccountContract/types/: auth.ts  transaction.ts
frontend/contracts/AbstractAccountContract/utils/: auth.ts
frontend/contracts/OIDCAuthContract/: OIDCAuthContract.ts  useOIDCAuthContract.ts
frontend/demo/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/demo/app/: global.d.ts  layout.tsx  page.tsx
frontend/demo/app/_components/: FacebookButton.tsx  GoogleButton.tsx  Providers.tsx  UpdateOIDCKeys.tsx  XButton.tsx
frontend/demo/app/_providers/: GoogleProvider.tsx
frontend/demo/app/_utils/: ethereum.ts  oidc.ts  solana.ts  webauthn.ts
frontend/demo/app/auth0/: page.tsx
frontend/demo/app/hooks/: useFacebookAuth.ts
frontend/demo/app/motif/: page.tsx
frontend/demo/app/oidc/: page.tsx
frontend/demo/components/: FacebookButton.tsx  GoogleButton.tsx
frontend/demo/contracts/AbstractAccountContract/: AbstractAccountContract.ts  useAbstractAccountContract.ts
frontend/demo/hooks/: useFacebookAuth.ts  useGoogleAuth.tsx  useInitNear.ts  useXAuth.ts
frontend/demo/lib/: pkce.ts
frontend/hooks/: useAccountData.ts  useAdminData.ts  useChainSigContract.ts  useChains.ts  useCopy.ts  useEnv.ts  useFacebookAuth.ts  useInitNear.ts
frontend/lib/: constants.ts  url.ts  utils.ts
frontend/lib/auth/: AuthAdapter.ts  AuthIdentity.ts  Identity.ts
frontend/lib/constants/: index.ts
frontend/providers/: AccountContext.tsx  FacebookProvider.tsx  GoogleProvider.tsx  QueryClientProvider.tsx
interfaces/src/: lib.rs  webauthn_auth.rs
near/contracts/: Cargo.toml
near/contracts/auth/solana-auth/: Cargo.toml
near/sdk/: package.json  tsconfig.json  vite.config.ts
passkey-auth-smart-contract/: Cargo.toml
passkey-auth-smart-contract/src/: lib.rs  types.rs
sdk/: .eslintrc.json  package.json  pnpm-lock.yaml  tsconfig.eslint.json  tsconfig.json  tsup.config.ts
sdk/solana/: .eslintrc.json  pnpm-lock.yaml
sdk/solana/app/: page.tsx
sdk/src/: index.ts
sdk/src/contract/: AbstractAccountContract.ts
sdk/src/near/: CustomNearAccount.ts  constants.ts  index.ts  transaction.ts
sdk/src/types/: account.ts  auth.ts  contract.ts  index.ts  operations.ts  user-operation.ts
sdk/src/utils/: builder.ts  canonicalize.ts
solana/contracts/: Anchor.toml  Cargo.toml  package.json
solana/contracts/programs/contracts/: Cargo.toml
solana/contracts/programs/contracts/src/: lib.rs
solana/frontend/: package.json  pnpm-lock.yaml  tailwind.config.js
solana/frontend/app/: layout.tsx  page.tsx
solana/sdk/: package.json
solana/sdk/app/: page.tsx  providers.tsx
(+47 files in other folders)
