[workspace]
members = [
  "abstract-account",
  "interfaces",
  "auth/webauthn-auth",
  "auth/ethereum-auth",
  "auth/solana-auth",
  "auth/oidc-zk",
]

[workspace.dependencies]
near-sdk = "5.5.0"
p256 = "0.13.2"
sha2 = "0.10.8"
hex = "0.4.3"
schemars = "0.8.21"
sha3 = "0.10.8"
k256 = "0.13.4"
bs58 = "0.5.1"
base64 = "0.22.1"
borsh = "1.5.2"
serde_json = "1.0.132"
ark-ff = { git = "https://github.com/openmina/algebra", rev = "33a1de2" } # branch: fix-openmina
ark-ec = { git = "https://github.com/openmina/algebra", rev = "33a1de2" } # branch: fix-openmina
ark-poly = { git = "https://github.com/openmina/algebra", rev = "33a1de2" } # branch: fix-openmina
ark-serialize = { git = "https://github.com/openmina/algebra", rev = "33a1de2" } # branch: fix-openmina

[patch.crates-io]
ark-ff = { git = "https://github.com/openmina/algebra", rev = "33a1de2" } # branch: fix-openmina
ark-ec = { git = "https://github.com/openmina/algebra", rev = "33a1de2" } # branch: fix-openmina
ark-poly = { git = "https://github.com/openmina/algebra", rev = "33a1de2" } # branch: fix-openmina
ark-serialize = { git = "https://github.com/openmina/algebra", rev = "33a1de2" } # branch: fix-openmina
