[workspace]
members = [
  "abstract-account",
  "interfaces",
  "auth/webauthn-auth",
  "auth/ethereum-auth",
  "auth/solana-auth",
  "auth/oidc-auth",
]

[workspace.dependencies]
near-sdk = "5.7.0"
p256 = "0.13.2"
sha2 = "0.10.8"
hex = "0.4.3"
schemars = "0.8.21"
sha3 = "0.10.8"
k256 = "0.13.4"
bs58 = "0.5.1"
base64 = "0.22.1"
borsh = "1.5.3"
serde_json = "1.0.135"
jsonwebtoken = "9.1.0"
