[package]
name = "abstract-account"
description = "cargo-near-new-project-description"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { workspace = true }
schemars = { workspace = true }
borsh = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
near-sdk-contract-tools = { workspace = true }
interfaces = { path = "../interfaces" }
base64 = "0.22.1"
serde_json_canonicalizer = "0.3.0"

[dev-dependencies]
near-sdk = { version = "5.7.0", features = ["unit-testing"] }
near-workspaces = { version = "0.16.0", features = ["unstable"] }
tokio = { version = "1.43.0", features = ["full"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
