[package]
name = "contracts"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "contracts"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.0"
base64 = "0.22.1"
sha2 = "0.10.8"
rsa = { version = "0.9.7", features = ["sha2"] }
# Pinned for compatibility with rustc 1.79.0-dev
base64ct = "=1.6.0" 